# personal_dashboard

./: .gitignore  Dockerfile  pyproject.toml
personal_dashboard/: telegram_webhook.py
personal_dashboard/backend/: authentication.py  database.py
personal_dashboard/frontend/: dashboard.py  page_components.py
src/personal_dashboard/: main.py
src/personal_dashboard/backend/: database.py  financial_analysis.py  utils.py
src/personal_dashboard/frontend/: dashboard.py  figures.py  page_components.py
