[tool.poetry]
name = "personal-dashboard"
version = "0.1.0"
description = ""
authors = ["Thomas <tomatheickal@hotmail.com>"]
readme = "README.md"
packages = [{include = "personal_dashboard", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.0.1"
loguru = "^0.7.2"
psycopg2-binary = "^2.9.9"
psycopg = {extras = ["binary"], version = "^3.1.18"}
langchain-community = "^0.2.10"
streamlit = "^1.37.0"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
